Fix footer layout issue

--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ ul {
 }
 
 .footer {
-  margin: 10em;
+  margin: 0 10em;
   line-height: 1.6;
   font-size: 12px;
 }
